# co-researcher

./: .gitignore  CLAUDE.md  README.md  cli.py  demo_notebook.py  llm_client.py  main.py  marimo_context_extractor.py  orchestrator.py  prompts.py  pyproject.toml  requirements.txt  research_orchestrator.py  sample_data.csv  test_mcp_client.py  test_notebook.py
tests/: test_cli.py  test_notebook_api.py  test_orchestrator.py
